<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">Red</string>
    <string name="button_yellow">Yellow</string>
    <string name="button_green">Green</string>
    <string name="how_to_play">How To Play</string>
    <string name="tap_the_boxes_and_Button">Tab the Screen and Buttons</string>

</resources>
